--- a/como_chegar_espanho.html
+++ b/como_chegar_espanho.html
@@ -5,37 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como chegar</title>
 
-    <style>
-        main{
-            min-width: 320;
-            max-width: 900; 
-        }
-        body{
-            text-align: center;
-            border-color: rgb(243, 226, 151);
-            padding: 10px;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(243, 226, 151);
-            margin: auto;
-            background: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
-            
-        }
-        nav > a{                    /*link do menu*/
-            color: white;
-            padding: 10px; /*dist. dos links*/
-            border-radius: 5px; /*arred. da borda*/
-            text-decoration: none; /*tirar sublinhado*/ 
-            font-weight: bolder; /*negrito*/
-        }
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
-        nav > a:hover {             /*quando passa o mouse em cima*/
-            background-color: var(--cor3);
-            color: rgb(136, 208, 250);
-        }
-        img{
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styleComoChegar.css">
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
@@ -46,12 +18,17 @@
         </div>
         <nav>
             <a href="inicial_espanhol.html">INICIO</a>
+            <!--
             <a href="professores_espanhol.html">ARTISTAS</a>    
             <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
             <a href="aulas_espanhol.html">CLASES</a>
-            <a href="pacotes_espanhol.html">PAQUETES</a>
             <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
-            </nav>  
+            -->
+            <a href="pacotes_espanhol.html">PAQUETES</a>
+            <a href="galeria_espanhol.html">GALERÍA</a>
+
+        </nav>
+
     <br>
     <br>
     <div class="guia">
