--- a/como_chegar_ingles.html
+++ b/como_chegar_ingles.html
@@ -5,38 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to access</title>
 
-    <style>
-        main{
-           min-width: 320;
-            max-width: 900; 
-        }
-        body{
-            text-align: center;
-            border-color: rgb(243, 226, 151);
-            padding: 10px;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(243, 226, 151);
-            margin: auto;
-            background: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
-            
-        }
-        nav > a{                    /*link do menu*/
-            color: white;
-           
-            padding: 10px; /*dist. dos links*/
-            border-radius: 5px; /*arred. da borda*/
-            text-decoration: none; /*tirar sublinhado*/ 
-            font-weight: bolder; /*negrito*/
-        }
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
-        nav > a:hover {             /*quando passa o mouse em cima*/
-            background-color: var(--cor3);
-            color: rgb(136, 208, 250);
-        }
-        img {
-            width: 100%;
-        }    
-    </style>
+    <link rel="stylesheet" href="styleComoChegar.css">
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
@@ -48,11 +19,14 @@
         </div>
         <nav>
             <a href="inicial_ingles.html">HOME PAGE</a>
+            <!--
             <a href="professores_ingles.html">ARTISTS</a>    
             <a href="programacao_ingles.html">SCHEDULE</a>
             <a href="aulas_ingles.html">CLASSES</a>
-            <a href="pacotes_ingles.html">TICKETS</a>
             <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+            -->
+            <a href="pacotes_ingles.html">TICKETS</a>
+            <a href="galeria_ingles.html">GALLERY</a>
         </nav>
         <br>
         <br>
