--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -34,8 +34,10 @@
 <!--
 <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
 <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+
 -->
 <a href="galeria_espanhol.html">GALERÍA</a>
+
 </nav>    
 <h1>El comienzo de una nueva era nos ha traído aquí!!!</h1>
 <h1>Ahora es el momento de hacer historia...29/01/2026 á 01/02/2026</h1>
@@ -43,12 +45,11 @@
     Ven al MARAÚ DANCE FESTIVAL.  </h3>
 <br>
 <br>
-<!--
+
 <video controls>
-    <source src="video/VideoMarauDanceFestival2026 IV.mp4" type="video/mp4">
+    <source src="video/AFTER 25 4K - SEM DATA (1).mp4" type="video/mp4">
 </video>
--->
-<img src="imagens/flyer/Lote Escuro 2026.png" alt="">
+
 <h4>
     <img src="imagens/teste/local evento marcação.png" alt="">
     Rua Vasco Neto, nº 09 - Barra Grande - Maraú - Bahia - Brasil - Cep.: 45520-000</h4>
