--- a/pag006.html
+++ b/pag006.html
@@ -5,37 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como chegar</title>
 
-    <style>
-        main{
-            min-width: 320;
-            max-width: 900; 
-        }
-        body{
-            text-align: center;
-            border-color: rgb(243, 226, 151);
-            padding: 10px;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(243, 226, 151);
-            margin: auto;
-            background: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
-            
-        }
-        nav > a{                    /*link do menu*/
-            color: white;
-            padding: 10px; /*dist. dos links*/
-            border-radius: 5px; /*arred. da borda*/
-            text-decoration: none; /*tirar sublinhado*/ 
-            font-weight: bolder; /*negrito*/
-        }
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
-        nav > a:hover {             /*quando passa o mouse em cima*/
-            background-color: var(--cor3);
-            color: rgb(136, 208, 250);
-        }
-        img{
-            width: 100%;
-        }    
-    </style>
+    <link rel="stylesheet" href="styleComoChegar.css">
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
@@ -46,12 +18,16 @@
         </div>
         <nav>
             <a href="index.html">PAGINA INICIAL</a>
+        <!--    
             <a href="pag003.html">ARTISTAS</a>    
             <a href="pag004.html">PROGRAMAÇÃO</a>
             <a href="pag007.html">AULAS</a>
-            <a href="pag002.html">PACOTES</a>
             <a href="pag005.html">HOSPEDAGEM</a>
-            </nav>  
+        -->  
+            <a href="pag002.html">PACOTES</a>
+            <a href="pag008.html">GALERIA</a>
+  
+        </nav>  
     <br>
     <br>
     <img src="imagens/guia/MDF_GUIA_01.png" alt="">
