--- a/pag005.html
+++ b/pag005.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospedagem</title>
 
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
+
     <style>
         body{
             
