--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospedaje</title>
+    <title>GALERÍA</title>
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
@@ -60,6 +60,26 @@
             <source src="video/video04.mp4" type="video/mp4">
             <source src="video/video04MOV.mov">
         </video>
+    </div>
+
+    <br>
+    <br>
+
+    <h2>FOTOS 2025</h2>
+    <br>
+    <br>
+    
+    <div class="fotos">
+        <h3>BAILES</h3>
+        <a href="photos_bailes.html" >
+            <img src="imagens/fotos/Bailes - Fotos @thamyresvaladaresphotos/Baile de Abertura/1.jpg" alt="" width="25%" >
+        </a>
+    </div>
+    <div class="fotos">
+        <h3>CLASES</h3>
+        <a href="photos_aulas_espanhol.html">
+        <img src="fotos/Aulas/Aula_01.jpg" alt="" width="25%">
+    </a>
     </div>
 
     <div>
