--- a/pag008.html
+++ b/pag008.html
@@ -70,7 +70,6 @@
     <br>
 
     <h2>FOTOS 2025</h2>
-
     <br>
     <br>
     
@@ -83,7 +82,7 @@
     <div class="fotos">
         <h3>AULAS</h3>
         <a href="photos_aulas.html">
-        <img src="imagens/fotos/Aulas -Fotos @thamyresvaladaresphotos/Familia Lira/MDF -BA  - Fotos @thamyresvaladaresphotos-41.jpg" alt="" width="25%">
+        <img src="fotos/Aulas/Aula_01.jpg" alt="" width="25%">
     </a>
     </div>
 
