--- a/pag008.html
+++ b/pag008.html
@@ -76,7 +76,7 @@
     <div class="fotos">
         <h3>BAILES</h3>
         <a href="photos_bailes.html" >
-            <img src="imagens/fotos/Bailes - Fotos @thamyresvaladaresphotos/Baile de Abertura/1.jpg" alt="" width="25%" >
+            <img src="fotos/Bailes/61.jpg" alt="" width="25%" >
         </a>
     </div>
     <div class="fotos">
