--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -70,8 +70,8 @@
     <br>
     
     <div class="fotos">
-        <h3>BAILES</h3>
-        <a href="photos_bailes.html" >
+        <h3>DANZAS</h3>
+        <a href="photos_bailes_espanhol.html" >
             <img src="imagens/fotos/Bailes - Fotos @thamyresvaladaresphotos/Baile de Abertura/1.jpg" alt="" width="25%" >
         </a>
     </div>
