--- a/galeria_ingles.html
+++ b/galeria_ingles.html
@@ -71,8 +71,8 @@
     
     <div class="fotos">
         <h3>DANCES</h3>
-        <a href="photos_bailes.html" >
-            <img src="imagens/fotos/Bailes - Fotos @thamyresvaladaresphotos/Baile de Abertura/1.jpg" alt="" width="25%" >
+        <a href="photos_bailes_ingles.html" >
+            <img src="fotos/Bailes/61.jpg" alt="" width="25%" >
         </a>
     </div>
     <div class="fotos">
