--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -72,7 +72,7 @@
     <div class="fotos">
         <h3>DANZAS</h3>
         <a href="photos_bailes_espanhol.html" >
-            <img src="imagens/fotos/Bailes - Fotos @thamyresvaladaresphotos/Baile de Abertura/1.jpg" alt="" width="25%" >
+            <img src="fotos/Bailes/61.jpg" alt="" width="25%" >
         </a>
     </div>
     <div class="fotos">
