--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -50,7 +50,7 @@
     <br />
     <br />
     <br />
-    <h1>Disponible hasta el 15 de Agosto de 2025</h1>
+    <h1>Disponible hasta el 15 de Junio de 2025</h1>
     <br />
     <br />
     <a
