--- a/pag002.html
+++ b/pag002.html
@@ -52,7 +52,7 @@
     <br />
     <br />
     <br />
-    <h1>Disponível até 15 de Agosto de 2025</h1>
+    <h1>Disponível até 15 de Junho de 2025</h1>
     <br />
     <br />
 
