--- a/pag008.html
+++ b/pag008.html
@@ -19,14 +19,15 @@
 
     <nav>
         <a href="index.html">PAGINA INICIAL</a>
-        <!--
-        <a href="pag003.html">ARTISTAS</a>    
-        <a href="pag004.html">PROGRAMAÇÃO</a>
-        <a href="pag007.html">AULAS</a>
-        <a href="pag006.html">COMO CHEGAR</a>
-        -->
         <a href="pag002.html">PACOTES</a>
-        
+        <a href="pag003.html">ARTISTAS</a>    
+        <a href="pag005.html">HOSPEDAGEM</a>
+
+        <!--
+        <a href="pag004.html">PROGRAMAÇÃO</a>
+        <a href="pag006.html">COMO CHEGAR</a>
+        <a href="pag007.html">AULAS</a>
+        -->
         
     </nav>
 
