--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -18,13 +18,15 @@
     </div>  
     <nav>
         <a href="inicial_espanhol.html">INICIO</a>
-        <!--
+        <a href="pacotes_espanhol.html">PAQUETES</a>
         <a href="professores_espanhol.html">ARTISTAS</a>    
+        <a href="galeria_espanhol.html">GALERÍA</a>    
+
+        <!--
         <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
         <a href="aulas_espanhol.html">CLASES</a>
         <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
         -->
-        <a href="pacotes_espanhol.html">PAQUETES</a>
         
             
     </nav>
