--- a/pag003.html
+++ b/pag003.html
@@ -88,21 +88,6 @@
     </div>
     <br>
     <br>
-    </div>
-    <br>
-    <br>
-    <h1>FOTOGRAFIA</h1>
-    <br>
-    <br>
-    <div>
-        <a href="https://www.instagram.com/thamyresvaladaresphotos/" target="_blank">
-        <img src="imagens/professores/fotografa.jpg" alt="">
-        </a>
-        <h3>Thamyres Valadares</h3>
-        <p>Espirito Santo - Brasil</p>
-    </div>
-    <br>
-    <br>
     <h1>ORGANIZAÇÃO</h1>
     <br>
     <br>
@@ -116,7 +101,10 @@
     <br>
     <br>
     <br>
-    
+    <div class="Patrocinio">
+        <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+<!--    
     <h4>Patrocinador Oficial</h4>
 <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -156,7 +144,8 @@
 </a> 
 <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
     <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
-</a>   
+</a>
+-->   
 </body>
 
 </html>
