--- a/photos_aulas.html
+++ b/photos_aulas.html
@@ -73,6 +73,21 @@
             <img class="gallery-item gallery-item-46" src="fotos/Aulas/Aula_46.jpg" data-index="46">
             <img class="gallery-item gallery-item-47" src="fotos/Aulas/Aula_47.jpg" data-index="47">
             <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="48">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="49">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="50">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="51">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="52">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="53">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="54">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="55">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="56">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="57">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="58">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="59">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="60">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="61">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="62">
+            <img class="gallery-item gallery-item-48" src="fotos/Aulas/Aula_48.jpg" data-index="63">
         </div>
         <div class="gallery-controls">
 
