--- a/pag005.html
+++ b/pag005.html
@@ -99,6 +99,9 @@
         img{
             padding: 4px;
         }
+        .flyer > img{
+            width: 100%;
+        }
         
     </style>
 
