--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -17,16 +17,30 @@
     </div>
     <nav>
       <a href="inicial_espanhol.html">INICIO</a>
+    </nav>
+    <nav>
       <a href="professores_espanhol.html">ARTISTAS</a> 
+    </nav> 
+    <nav>
       <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+    </nav>
+    <nav>
       <a href="galeria_espanhol.html">GALERIA</a>
-      <!--
-            <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
-            <a href="aulas_espanhol.html">CLASES</a>
-            <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+    </nav> 
+<!--
+    <nav>
+      <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+    </nav>
+    <nav>
+      <a href="aulas_espanhol.html">CLASES</a>
+    </nav>
+    <nav>
+      <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+    </nav>
+      
       -->
 
-    </nav>
+   
     <br />
     <br />
     <h1>PAQUETES MARAÚ DANCE FESTIVAL 2026</h1>
