--- a/pag007.html
+++ b/pag007.html
@@ -48,8 +48,7 @@
             color: white;
         }
         nav{
-            
-            padding: 10px;
+          display: inline-flex;  
             
         }
         a{                    /*link do menu*/
@@ -85,12 +84,27 @@
         </div>
         <nav>
             <a href="index.html">PAGINA INICIAL</a>
-            <a href="pag003.html">ARTISTAS</a>    
+        </nav>
+        <nav>
             <a href="pag002.html">PACOTES</a>
-            <a href="pag004.html">PROGRAMAÇÃO</a>
+        </nav> 
+        <nav>
+            <a href="pag003.html">ARTISTAS</a>    
+        </nav> 
+        <nav>
             <a href="pag005.html">HOSPEDAGEM</a>
+        </nav>  
+        <nav>
+            <a href="pag008.html">GALERIA</a>
+        </nav>
+    <!--    
+        <nav>
+            <a href="pag004.html">PROGRAMAÇÃO</a>
+        </nav>
+        <nav>
             <a href="pag006.html">COMO CHEGAR</a>
-            </nav>
+        </nav>
+    -->    
     <br>
     <br>
     <br>
