--- a/pag008.html
+++ b/pag008.html
@@ -19,10 +19,16 @@
 
     <nav>
         <a href="index.html">PAGINA INICIAL</a>
+    </nav>
+    <nav>    
         <a href="pag002.html">PACOTES</a>
-        <a href="pag003.html">ARTISTAS</a>    
+    </nav>
+    <nav>    
+        <a href="pag003.html">ARTISTAS</a>
+    </nav>
+    <nav>        
         <a href="pag005.html">HOSPEDAGEM</a>
-
+    </nav>    
         <!--
         <a href="pag004.html">PROGRAMAÇÃO</a>
         <a href="pag006.html">COMO CHEGAR</a>
@@ -47,20 +53,14 @@
         <source src="video/video01.mp4" type="video/mp4" >
         <source src="video/video01MOV.mov">
         </video>
-    </div>
-    <div>
         <video controls>
         <source src="video/video02.mp4" type="video/mp4">
         <source src="video/video02MOV.mov">
         </video>
-    </div>
-    <div>
         <video controls>
         <source src="video/video03.mp4" type="video/mp4">
         <source src="video/video03MOV.mov">
         </video>
-    </div>
-    <div>
         <video controls>
         <source src="video/video04.mp4" type="video/mp4">
         <source src="video/video04MOV.mov">
