--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -18,18 +18,30 @@
     </div>  
     <nav>
         <a href="inicial_espanhol.html">INICIO</a>
+    </nav>
+    <nav>
         <a href="pacotes_espanhol.html">PAQUETES</a>
+    </nav> 
+    <nav>
         <a href="professores_espanhol.html">ARTISTAS</a>    
-        <a href="galeria_espanhol.html">GALERÍA</a>    
-
-        <!--
+    </nav>
+    <nav>   
+        <a href="hospedagem_espanhol.html">HOSPEDAJE</a>    
+    </nav>
+    <!--
+    <nav>
         <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+    </nav>
+    <nav>
         <a href="aulas_espanhol.html">CLASES</a>
+    </nav>
+    <nav>
         <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
-        -->
+    </nav>
+    -->
         
             
-    </nav>
+   
     <br>
     <br>
     <br>
