--- a/galeria_ingles.html
+++ b/galeria_ingles.html
@@ -15,19 +15,32 @@
 <body>
     <div class="logo">
         <img src="imagens/maraú02.png" alt="logo">
-    </div>  
+    </div>
+
     <nav>
         <a href="inicial_ingles.html">HOME PAGE</a>
-        <!--
-        <a href="professores_ingles.html">ARTISTS</a>    
-        <a href="programacao_ingles.html">SCHEDULE</a>
-        <a href="aulas_ingles.html">CLASSES</a>
-        -->
-        <a href="pacotes_ingles.html">TICKETS</a>
-        <!--
-        <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
-        -->    
     </nav>
+    <nav>
+        <a href="pacotes_ingles.html">TICKETS</a>
+    </nav> 
+    <nav>
+        <a href="professores_ingles.html">ARTISTS</a>    
+    </nav> 
+    <nav>
+        <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+    </nav> 
+    <!--
+    <nav>
+        <a href="programacao_ingles.html">SCHEDULE</a>
+    </nav>
+    <nav>
+        <a href="aulas_ingles.html">CLASSES</a>
+    </nav>
+    <nav>
+        <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
+    </nav>
+    -->
+    
     <br>
     <br>
     <br>
