--- a/index.html
+++ b/index.html
@@ -30,19 +30,30 @@
     </a>
 </div>
 <nav>
-<a href="pag002.html">PACOTES</a>
-<a href="pag003.html">ARTISTAS</a>    
+    <a href="pag002.html">PACOTES</a>
+</nav>
+<nav>
+    <a href="pag003.html">ARTISTAS</a>
+</nav>
+<nav>        
 <a href="pag005.html">HOSPEDAGEM</a>
+</nav>
+<nav>
 <a href="pag008.html">GALERIA</a>
-
+</nav>
 <!--
-<a href="pag004.html">PROGRAMAÇÃO</a>
-<a href="pag006.html">COMO CHEGAR</a>
-<a href="pag007.html">AULAS</a>
+<nav>
+    <a href="pag004.html">PROGRAMAÇÃO</a>
+</nav>
+<nav>
+    <a href="pag006.html">COMO CHEGAR</a>
+</nav>
+<nav>
+    <a href="pag007.html">AULAS</a>
+</nav>
 -->
 
-
-</nav>    
+   
 <h1>O início de uma nova era nos trouxe até aqui…</h1> 
 <h1>Agora, é hora de fazer história!...29/01/2026 á 01/02/2026</h1>    
 <h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
