--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -26,16 +26,30 @@
 
 <nav>
     <a href="pacotes_espanhol.html">PAQUETES</a>
+</nav>
+<nav>
     <a href="professores_espanhol.html">ARTISTAS</a> 
+</nav>  
+<nav>
     <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+</nav> 
+<nav>
     <a href="galeria_espanhol.html">GALERÍA</a>
+</nav> 
+
+<nav>
+    <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+</nav>
+<nav>
+    <a href="aulas_espanhol.html">CLASES</a>
+</nav>
+<nav>
+    <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+</nav>
 <!--    
-<a href="programacao_espanhol.html">PROGRAMACIÓN</a>
-<a href="aulas_espanhol.html">CLASES</a>
-<a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
 -->
 
-</nav>    
+    
 <h1>El comienzo de una nueva era nos ha traído aquí!!!</h1>
 <h1>Ahora es el momento de hacer historia...29/01/2026 á 01/02/2026</h1>
 <h2>¡¡¡Mucho sol, mucha Lambada y Zouk brasileño en un paraíso tropical!!!!
