--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -26,17 +26,29 @@
 
 <nav>
     <a href="pacotes_ingles.html">TICKETS</a>
+</nav> 
+<nav>
     <a href="professores_ingles.html">ARTISTS</a>  
+</nav> 
+<nav>
     <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+</nav> 
+<nav>
     <a href="galeria_ingles.html">GALLERY</a>
-<!--    
-<a href="programacao_ingles.html">SCHEDULE</a>
-<a href="aulas_ingles.html">CLASSES</a>
-<a href="como_chegar_ingles.html">HOW TO ACCESS</a>
-
+</nav>  
+<!--
+<nav>
+    <a href="programacao_ingles.html">SCHEDULE</a>
+</nav>
+<nav>
+    <a href="aulas_ingles.html">CLASSES</a>
+</nav>
+<nav>
+    <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
+</nav>
 -->
 
-</nav>    
+   
 <h1>The beginning of a new era has brought us here!!!</h1>
 <h1>Now it's time to make history...01/29/2026 to 02/01/2026</h1>
 <h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL.  </h3>
