--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -17,18 +17,27 @@
     </div>
     <nav>
       <a href="inicial_ingles.html">HOME PAGE</a>
-      <a href="professores_ingles.html">ARTISTS</a>    
-      <a href="hospedagem_ingles.html">ACCOMMODATION</a>
-      <a href="galeria_ingles.html">GALLERY</a>
-
-      <!--
-            <a href="programacao_ingles.html">SCHEDULE</a>
-            <a href="aulas_ingles.html">CLASSES</a>
-            <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
-
-            -->
-
     </nav>
+    <nav>
+      <a href="professores_ingles.html">ARTISTS</a>    
+    </nav> 
+    <nav>
+      <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+    </nav> 
+    <nav>
+      <a href="galeria_ingles.html">GALLERY</a>
+    </nav>
+    <!--
+    <nav>
+      <a href="programacao_ingles.html">SCHEDULE</a>
+    </nav>
+    <nav>
+      <a href="aulas_ingles.html">CLASSES</a>
+    </nav>
+    <nav>
+      <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
+    </nav>
+     -->  
     <br />
     <br />
     <h1>MARAU DANCE FESTIVAL 2026 TICKETS</h1>
