--- a/pag002.html
+++ b/pag002.html
@@ -17,18 +17,29 @@
     </div>
     <nav>
       <a href="index.html">PAGINA INICIAL</a>
-      <a href="pag003.html">ARTISTAS</a>    
-      <a href="pag005.html">HOSPEDAGEM</a>
-      <a href="pag008.html">GALERIA</a>
-
-      <!--
-            <a href="pag004.html">PROGRAMAÇÃO</a>
-            <a href="pag006.html">COMO CHEGAR</a>
-            <a href="pag007.html">AULAS</a>
-      -->
-
-
     </nav>
+    <nav>  
+      <a href="pag003.html">ARTISTAS</a>
+    </nav>
+    <nav>      
+      <a href="pag005.html">HOSPEDAGEM</a>
+    </nav>
+    <nav>  
+      <a href="pag008.html">GALERIA</a>
+    </nav>  
+  <!--  
+    <nav>
+      <a href="pag004.html">PROGRAMAÇÃO</a>
+    </nav>
+    <nav>     
+      <a href="pag006.html">COMO CHEGAR</a>
+    </nav>     
+    <nav>  
+      <a href="pag007.html">AULAS</a>
+    </nav>
+  -->  
+
+   
     <br />
     <br />
     <h1>PACOTES MARAU DANCE FESTIVAL 2026</h1>
