--- a/pag006.html
+++ b/pag006.html
@@ -18,16 +18,29 @@
         </div>
         <nav>
             <a href="index.html">PAGINA INICIAL</a>
-        <!--    
-            <a href="pag003.html">ARTISTAS</a>    
-            <a href="pag004.html">PROGRAMAÇÃO</a>
-            <a href="pag007.html">AULAS</a>
-            <a href="pag005.html">HOSPEDAGEM</a>
-        -->  
+        </nav>
+        <nav>
             <a href="pag002.html">PACOTES</a>
+        </nav>
+        <nav>
+            <a href="pag003.html">ARTISTAS</a>    
+        </nav>
+        <nav>
+            <a href="pag005.html">HOSPEDAGEM</a>
+        </nav>
+        <nav>
             <a href="pag008.html">GALERIA</a>
+        </nav>
+        <!--
+        <nav>
+            <a href="pag004.html">PROGRAMAÇÃO</a>
+        </nav>
+        <nav>
+            <a href="pag007.html">AULAS</a>
+        </nav>
+        -->  
   
-        </nav>  
+        
     <br>
     <br>
     <img src="imagens/guia/MDF_GUIA_01.png" alt="">
