--- a/professores_espanhol.html
+++ b/professores_espanhol.html
@@ -23,15 +23,27 @@
 
     <nav>
         <a href="inicial_espanhol.html">INICIO</a>
-        <a href="pacotes_espanhol.html">PAQUETES</a>
-        <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
-        <a href="galeria_espanhol.html">GALERIA</a>
-        <!--
-        <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
-        <a href="aulas_espanhol.html">CLASES</a>
-        <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
-        -->
     </nav>
+    <nav>
+        <a href="pacotes_espanhol.html">PAQUETES</a>
+    </nav>    
+    <nav>
+        <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+    </nav> 
+    <nav>
+        <a href="galeria_espanhol.html">GALERIA</a>
+    </nav>   
+    <!--    
+    <nav>
+        <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+    </nav> 
+    <nav>
+        <a href="aulas_espanhol.html">CLASES</a>
+    </nav> 
+    <nav>
+        <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+    </nav>  
+    -->
     <br>
     <br>
     <br>
