--- a/professores_ingles.html
+++ b/professores_ingles.html
@@ -21,15 +21,27 @@
     
     <nav>
         <a href="inicial_ingles.html">HOME PAGE</a>
-        <a href="pacotes_ingles.html">PACKAGES</a>
-        <a href="hospedagem_ingles.html">ACCOMMODATION</a>
-        <a href="galeria_ingles.html">GALLERY</a>
-        <!--  
-        <a href="programacao_ingles.html">PROGRAMMING</a>
-        <a href="aulas_ingles.html">CLASSES</a>
-        <a href="como_chegar_ingles.html">HOW TO GET</a>
-        -->
     </nav>
+    <nav>
+        <a href="pacotes_ingles.html">PACKAGES</a>
+    </nav> 
+    <nav>
+        <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+    </nav> 
+    <nav>
+        <a href="galeria_ingles.html">GALLERY</a>
+    </nav>  
+     <!--   
+     <nav>
+        <a href="programacao_ingles.html">PROGRAMMING</a>
+     </nav>
+     <nav>
+        <a href="aulas_ingles.html">CLASSES</a>
+     </nav> 
+     <nav>
+        <a href="como_chegar_ingles.html">HOW TO GET</a>
+     </nav>  
+    -->
     <br>
     <br>
     <br>
