--- a/galeria_espanhol.html
+++ b/galeria_espanhol.html
@@ -96,6 +96,11 @@
     </a>
     </div>
 
+
+     <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <div>
         <h4>Esponsor oficial</h4>
         <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -138,7 +143,7 @@
             <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
         </a>
     </div>
-    
+    -->
 
 
 
