--- a/galeria_ingles.html
+++ b/galeria_ingles.html
@@ -94,7 +94,12 @@
         <img src="fotos/Aulas/Aula_01.jpg" alt="" width="25%">
     </a>
     </div>
-    
+    <br>
+    <br>
+     <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <div>
         <h4>Official Sponsor</h4>
         <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -137,7 +142,7 @@
             <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
         </a>
     </div>
-    
+    -->
 
 
 
