--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -36,7 +36,7 @@
 <nav>
     <a href="galeria_espanhol.html">GALERÍA</a>
 </nav> 
-
+<!--
 <nav>
     <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
 </nav>
@@ -46,7 +46,6 @@
 <nav>
     <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
 </nav>
-<!--    
 -->
 
     
@@ -75,7 +74,11 @@
 </a>
 <br>
 <br>
+<div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+</div>
 
+<!--
 <h4>Esponsor oficial</h4>
 <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -115,7 +118,7 @@
 <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
     <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
 </a>
-
+-->
 </body>
 <footer>
     criado por Newton Pohsner
