--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -74,6 +74,10 @@
 <br>
 <br>
 
+<div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+</div>
+<!--
 <h4>Official Sponsor</h4>
 <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -113,7 +117,7 @@
 <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
     <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
 </a>
-
+-->
 </body>
 <footer>
     created by Newton Pohsner
