--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -77,6 +77,10 @@
     <br />
     <br />
     <br />
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <div class="apoio">
       <h4>Esponsor oficial</h4>
       <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -128,5 +132,6 @@
         <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="" />
       </a>
     </div>
+    -->
   </body>
 </html>
