--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -75,6 +75,10 @@
     <br />
     <br />
     <br />
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <div class="apoio">
       <h4>Official Sponsor</h4>
       <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -126,5 +130,6 @@
         <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="" />
       </a>
     </div>
+    -->
   </body>
 </html>
