--- a/pag002.html
+++ b/pag002.html
@@ -79,6 +79,10 @@
     <br />
     <br />
     <br />
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+</div>
+    <!--
     <div class="apoio">
       <h4>Patrocinador Oficial</h4>
       <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -130,5 +134,6 @@
         <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="" />
       </a>
     </div>
+    -->
   </body>
 </html>
