--- a/pag003.html
+++ b/pag003.html
@@ -113,6 +113,12 @@
     <br>
     <br>
     <br>
+
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+
+    <!--
     <h4>Patrocinador Oficial</h4>
 <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -153,7 +159,7 @@
 <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
     <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
 </a>
-  
+-->  
 </body>
 
 </html>
