--- a/pag008.html
+++ b/pag008.html
@@ -86,7 +86,11 @@
         <img src="fotos/Aulas/Aula_01.jpg" alt="" width="25%">
     </a>
     </div>
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
 
+    <!--
     <div class="poio">
         <h4>Patrocinador Oficial</h4>
         <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
@@ -129,7 +133,7 @@
             <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
         </a>
     </div>
-    
+    -->
 
 
 
