--- a/professores_espanhol.html
+++ b/professores_espanhol.html
@@ -126,7 +126,10 @@
     <br>
     <br>
     <br>
-
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <h4>Esponsor oficial</h4>
     <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
         <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -167,6 +170,7 @@
     <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
         <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
     </a>
+    -->
 </body>
 
 </html>
