--- a/professores_ingles.html
+++ b/professores_ingles.html
@@ -127,7 +127,10 @@
     <br>
     <br>
     <br>
-    
+    <div class="Patrocinio">
+    <img src="imagens/professores/Patrocinador.png" alt="">
+    </div>
+    <!--
     <h4>Official Sponsor</h4>
 <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -167,7 +170,8 @@
 </a>
 <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
     <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
-</a>    
+</a>   
+--> 
 </body>
 
 </html>
