--- a/como_chegar_ingles.html
+++ b/como_chegar_ingles.html
@@ -19,20 +19,21 @@
         </div>
         <nav>
             <a href="inicial_ingles.html">HOME PAGE</a>
-            <!--
+            <a href="pacotes_ingles.html">TICKETS</a>
             <a href="professores_ingles.html">ARTISTS</a>    
+            <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+            <a href="galeria_ingles.html">GALLERY</a>
+
+            <!--
             <a href="programacao_ingles.html">SCHEDULE</a>
             <a href="aulas_ingles.html">CLASSES</a>
-            <a href="hospedagem_ingles.html">ACCOMMODATION</a>
             -->
-            <a href="pacotes_ingles.html">TICKETS</a>
-            <a href="galeria_ingles.html">GALLERY</a>
         </nav>
         <br>
         <br>
-        <img src="imagens/guia/MDF_GUIA_01.png" alt="">
-        <img src="imagens/guia/MDF_GUIA_04_ingles.png" alt="">
-        <img src="imagens/guia/MDF_GUIA_05_ingles.png" alt="">
+        <img src="imagens/como chegar/MDF_COMO-CHEGAR_01.jpg" alt="">
+        <img src="imagens/como chegar/MDF_COMO-CHEGAR_02.jpg" alt="">
+        <img src="imagens/como chegar/MDF_COMO-CHEGAR_03.jpg" alt="">
 
 
 </body>
