--- a/pag006.html
+++ b/pag006.html
@@ -43,9 +43,9 @@
         
     <br>
     <br>
-    <img src="imagens/guia/MDF_GUIA_01.png" alt="">
-    <img src="imagens/guia/MDF_GUIA_02.png" alt="">
-    <img src="imagens/guia/MDF_GUIA_03.png" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_01.jpg" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_02.jpg" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_03.jpg" alt="">
 </body>
 
 </html>
