--- a/como_chegar_espanho.html
+++ b/como_chegar_espanho.html
@@ -18,23 +18,24 @@
         </div>
         <nav>
             <a href="inicial_espanhol.html">INICIO</a>
-            <!--
+            <a href="pacotes_espanhol.html">PAQUETES</a>
             <a href="professores_espanhol.html">ARTISTAS</a>    
+            <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+            <a href="galeria_espanhol.html">GALERÍA</a>
+
+            <!--
             <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
             <a href="aulas_espanhol.html">CLASES</a>
-            <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
             -->
-            <a href="pacotes_espanhol.html">PAQUETES</a>
-            <a href="galeria_espanhol.html">GALERÍA</a>
 
         </nav>
 
     <br>
     <br>
     <div class="guia">
-    <img src="imagens/guia/MDF_GUIA_01.png" alt="">
-    <img src="imagens/guia/MDF_GUIA_02.png" alt="">
-    <img src="imagens/guia/MDF_GUIA_03.png" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_01.jpg" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_02.jpg" alt="">
+    <img src="imagens/como chegar/MDF_COMO-CHEGAR_03.jpg" alt="">
     </div>
 </body>
 
