att como chegar

--- a/pag008.html
+++ b/pag008.html
@@ -28,10 +28,12 @@
     </nav>
     <nav>        
         <a href="pag005.html">HOSPEDAGEM</a>
-    </nav>    
+    </nav> 
+    <nav>
+        <a href="pag006.html">COMO CHEGAR</a>
+    </nav>   
         <!--
         <a href="pag004.html">PROGRAMAÇÃO</a>
-        <a href="pag006.html">COMO CHEGAR</a>
         <a href="pag007.html">AULAS</a>
         -->
         
