--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -47,7 +47,8 @@
     <br />
     <br />
     <br />
-
+    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 days of workshop</h3>
     <h3>04 dances</h3>
@@ -58,10 +59,11 @@
     <h3>03 days of workshop</h3>
     <h3>04 dances</h3>
     <h3>***Boat Party not included***</h3>
+    -->
     <br />
     <br />
     <br />
-    <h1>Available until June 15, 2025</h1>
+    <h1>Available until September 15, 2025</h1>
     <br />
     <br />
 
