--- a/pag002.html
+++ b/pag002.html
@@ -50,6 +50,8 @@
     <br />
     <br />
 
+    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 Dias de workshops</h3>
     <h3>04 Bailes</h3>
@@ -63,8 +65,9 @@
     <br />
     <br />
     <br />
+    -->
     <br>
-    <h1>Disponível até 15 de Junho de 2025</h1>
+    <h1>Disponível até 15 de Setembro de 2025</h1>
     <br />
     <br />
 
