--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -50,7 +50,8 @@
     <br />
     <br />
     <br />
-
+    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 Días de workshops</h3>
     <h3>04 Bailes</h3>
@@ -61,10 +62,11 @@
     <h3>03 Días de workshops</h3>
     <h3>04 Bailes</h3>
     <h3>***Fiesta en barco no incluida***</h3>
+    -->
     <br />
     <br />
     <br />
-    <h1>Disponible hasta el 15 de Junio de 2025</h1>
+    <h1>Disponible hasta el 15 de Septiembre de 2025</h1>
     <br />
     <br />
     <a
