--- a/pag002.html
+++ b/pag002.html
@@ -49,8 +49,9 @@
     <br />
     <br />
     <br />
-
-    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <div class="lote">
+      <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    </div>
     <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 Dias de workshops</h3>
