--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -50,7 +50,13 @@
     <br />
     <br />
     <br />
-    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <div class="lote">
+      <img src="imagens/flyer/Lote03.jpg" alt="">
+    </div>
+
+    <div class="lote">
+      <img src="imagens/flyer/Bailes03.jpg" alt="">
+    </div>
     <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 Días de workshops</h3>
@@ -66,7 +72,7 @@
     <br />
     <br />
     <br />
-    <h1>Disponible hasta el 15 de Septiembre de 2025</h1>
+    <h1>Disponible hasta el 28 de Enero de 2026</h1>
     <br />
     <br />
     <a
