--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -47,7 +47,13 @@
     <br />
     <br />
     <br />
-    <img src="fotos/Lotes/Lote 02.jpg" alt="">
+    <div class="lote">
+      <img src="imagens/flyer/Lote03.jpg" alt="">
+    </div>
+
+    <div class="lote">
+      <img src="imagens/flyer/Bailes03.jpg" alt="">
+    </div>
     <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
     <h3>03 days of workshop</h3>
@@ -63,7 +69,7 @@
     <br />
     <br />
     <br />
-    <h1>Available until September 15, 2025</h1>
+    <h1>Available until January 28, 2026</h1>
     <br />
     <br />
 
