--- a/pag002.html
+++ b/pag002.html
@@ -50,7 +50,11 @@
     <br />
     <br />
     <div class="lote">
-      <img src="fotos/Lotes/Lote 02.jpg" alt="">
+      <img src="imagens/flyer/Lote03.jpg" alt="">
+    </div>
+
+    <div class="lote">
+      <img src="imagens/flyer/Bailes03.jpg" alt="">
     </div>
     <!--
     <h2>Full Pass + Boat Party R$ 699,00</h2>
@@ -68,7 +72,7 @@
     <br />
     -->
     <br>
-    <h1>Disponível até 15 de Setembro de 2025</h1>
+    <h1>Disponível até 28 de Janeiro de 2026</h1>
     <br />
     <br />
 
