--- a/hospedagem_espanhol.html
+++ b/hospedagem_espanhol.html
@@ -50,11 +50,11 @@
             padding: 10px;
         }
         h1{
-            color: white;
+            color: orangered;
             text-align: center;
         }
         h2{
-            color: white;
+            color: orangered;
             text-align: center;
         }
         h3{
