--- a/pag003.html
+++ b/pag003.html
@@ -83,7 +83,8 @@
         <img src="imagens/professores/dj STEF.png" alt="">
         <img src="imagens/professores/dj val.png" alt="">
         <img src="imagens/professores/dj ZE DO LAGOO.png" alt="">
-
+        <img src="imagens/professores/dj ginga.png" alt="">
+        <img src="imagens/professores/dj martin.png" alt="">
 
 
     </div>
